2002-11-17  Trey Matteson  <trey@apple.com>

	Fixed 3102076 - REGRESSION: infinite recursion involving bridge end
	Fixed 3100929 - REGRESSION: serverRedirectedForDataSource: not sent on server redirects
	Fixed 3103381 - REGRESSION: Going back from anchor doesn't restore scroll position

        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate handle:willSendRequest:]):  Return the copy of the
	request that we make instead of the original.
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:willSendRequest:]):  Call super after we make our mods
	to the request, so the copy that super makes for us includes those mods.

        * WebView.subproj/WebFramePrivate.h:  Added new state, WebFrameStateCompleting.
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _transitionToLayoutAcceptable]):  Completing state is a NOP.
        (-[WebFrame _transitionToCommitted]):  Completing state is a NOP.
        (-[WebFrame _isLoadComplete]):  Go to Completing state before calling [bridge end].
	Go to Completed state afterwards, only if no new loads started in the meantime.
        (-[WebFrame _loadItem:fromItem:withLoadType:]):  When doing anchor nav to get to the
	item, save and restore scroll state, and set the current item.
        (-[WebFrame _continueFragmentScrollAfterNavigationPolicy:request:]):
	Reorder the steps so the right scroll state gets saved to the right place.  Also, don't
	add a backForward item if we're doing a client redirect to an anchor.

2002-11-17  David Hyatt  <hyatt@apple.com>

	Back out my previous fix.  I have a better one that is
	confined to WebCore.
	
        * WebView.subproj/WebFramePrivate.m:
        (-[WebFrame _isLoadComplete]):

2002-11-17  David Hyatt  <hyatt@apple.com>

	The needsdisplay is necessary even for HTML documents.
	I over-optimized here.  Fixes the directory.apple.com
	regression and the santa clara library regression.
	